--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <hello name="{{ name }}"></hello>
 <p>Start editing to see some magic happen :)</p>
 
-<input appNumeric [formControl]="clasico" />
+<input appNumeric [decimals]="5" [formControl]="clasico" />
 <input appNumeric [formControl]="negativo" />
-<input appNumeric [formControl]="entero" />
+<input appNumOnly [formControl]="entero" />
