5 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <input appNumeric [decimals]="5" [formControl]="clasico" />
 <input appNumeric [formControl]="negativo" />
 <input appNumOnly [formControl]="entero" />
+<input appNumberFormat [formControl]="completo" />
